--- a/app/src/main/res/drawable/popup_coupon_config.xml
+++ b/app/src/main/res/drawable/popup_coupon_config.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-            <solid android:color="@color/button_press_color" />
+            <solid android:color="@color/color_white" />
             <corners android:radius="15dp" />
 
         </shape>
     </item>
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-            <solid android:color="@color/button_color" />
+            <solid android:color="@color/color_white" />
             <corners android:radius="15dp" />
         </shape>
     </item>
