--- a/app/src/main/res/layout/activity_term_use.xml
+++ b/app/src/main/res/layout/activity_term_use.xml
@@ -18,7 +18,7 @@
             android:layout_centerInParent="true"
             android:padding="@dimen/positive_8dp"
             android:src="@drawable/ic_close_webview"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
         <TextView
             android:maxLines="1"
