--- a/app/src/main/res/layout/drawer_nav_item_group.xml
+++ b/app/src/main/res/layout/drawer_nav_item_group.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:textColor="@color/colorBackground"
-        android:id="@+id/txt_group_tile"
+        android:id="@+id/txt_item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/positive_16dp"
