--- a/app/src/main/res/layout/activity_term_use.xml
+++ b/app/src/main/res/layout/activity_term_use.xml
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start|top"
-            android:layout_marginBottom="-10dp"
+            android:layout_marginBottom="@dimen/negative_8dp"
             android:max="100"
             android:padding="0dp"
             android:progressDrawable="@drawable/progress_horizontal" />
