--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -64,20 +64,20 @@
             android:background="@color/colorDivider" />
 
         <Button
-            android:visibility="gone"
             android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/button_register_mypage"
             android:text="@string/button_register"
-            android:textColor="@color/color_white" />
+            android:textColor="@color/color_white"
+            android:visibility="gone" />
 
         <LinearLayout
             android:id="@+id/ll_badge"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -89,64 +89,16 @@
                 android:textSize="@dimen/text_size_14sp" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:id="@+id/ll_add_badge"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/positive_12dp"
-                android:layout_marginRight="@dimen/positive_20dp"
                 android:layout_marginLeft="@dimen/positive_20dp"
+                android:layout_marginRight="@dimen/positive_20dp"
+                android:layout_marginTop="@dimen/positive_12dp"
+                android:layout_gravity="center"
                 android:orientation="horizontal"
-                android:visibility="visible"
-                android:gravity="center">
+                android:visibility="visible">
 
-            <ImageView
-                android:id="@+id/badge1"
-                android:layout_weight="1"
-                android:src="@drawable/badge_1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"/>
-            <ImageView
-                android:id="@+id/badge2"
-                android:layout_weight="1"
-                android:src="@drawable/badge_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"/>
-            <ImageView
-                android:id="@+id/badge3"
-                android:layout_weight="1"
-                android:src="@drawable/badge_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"/>
-            <ImageView
-                android:id="@+id/badge4"
-                android:layout_weight="1"
-                android:src="@drawable/badge_4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"/>
-            <ImageView
-                android:id="@+id/badge5"
-                android:layout_weight="1"
-                android:src="@drawable/badge_5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"/>
-            <ImageView
-                android:id="@+id/badge6"
-                android:layout_weight="1"
-                android:src="@drawable/badge_6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"/>
-            <ImageView
-                android:id="@+id/badge7"
-                android:layout_weight="1"
-                android:src="@drawable/badge_7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"/>
             </LinearLayout>
 
         </LinearLayout>
