--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,17 +22,18 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="@dimen/positive_16dp"
                 android:layout_marginStart="@dimen/positive_16dp"
-                android:background="@drawable/bg_press_states"
-                android:src="@drawable/combined_shape" />
+                android:background="@drawable/bg_press_states"/>
 
 
             <ImageView
+                android:id="@+id/img_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:src="@drawable/logo_orange" />
 
             <View
+                android:id="@+id/view"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:layout_alignParentBottom="true"
