--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#ee8247</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#fff</color>
-    <color name="colorDivider">#b4b4b4</color>
+    <color name="colorDivider">#EEEEEE</color>
 
     <!--Common-->
     <color name="color_white">#fff</color>
@@ -18,7 +18,7 @@
     <color name="drawer_background">#ee8247</color>
     <color name="drawer_item_background">#20fafaf7</color>
     <color name="drawer_item_background_pressed">#ea5e12</color>
-    <color name="bottom_nav_background">#64f6f6f6</color>
+    <color name="bottom_nav_background">#F6F6F6</color>
 
     <!--press states-->
     <color name="pressed_state">#f3d4d2d2</color>
