--- a/app/src/main/res/layout/activity_term_use.xml
+++ b/app/src/main/res/layout/activity_term_use.xml
@@ -36,21 +36,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <ProgressBar
+        `<ProgressBar
             android:id="@+id/progressBar2"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start|top"
-            android:layout_marginBottom="@dimen/negative_8dp"
+            android:layout_marginTop="@dimen/negative_8dp"
             android:max="100"
             android:padding="0dp"
             android:progressDrawable="@drawable/progress_horizontal" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:layout_alignParentTop="true"
-            android:background="@color/colorDivider" />
     </RelativeLayout>
 <LinearLayout
     android:orientation="vertical"
