--- a/app/src/main/res/layout/activity_term_use.xml
+++ b/app/src/main/res/layout/activity_term_use.xml
@@ -36,7 +36,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        `<ProgressBar
+        <ProgressBar
             android:id="@+id/progressBar2"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
@@ -60,7 +60,7 @@
             android:id="@+id/web_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/positive_16dp" />
+            />
 
     </FrameLayout>
 
