update google analytic update size progress bar loading to less update background footeruse color  on TermofuseActivity

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -59,7 +59,7 @@
         </FrameLayout>
 
         <LinearLayout
-            android:background="@color/text_bottom_nav_inactive"
+            android:background="@color/color_footer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/positive_8dp"
