--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -14,8 +14,7 @@
         android:progressDrawable="@drawable/progress_horizontal"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/negative_8dp"
+        android:layout_height="@dimen/positive_3dp"
         android:padding="0dp"
         android:id="@+id/progressBar2"
         android:max="100"
