--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
 
     <!--Common-->
     <color name="color_white">#fff</color>
+    <color name="color_footer">#F6F6F6</color>
     <color name="divider_color">#acacac</color>
     <color name="text_bottom_nav_inactive">#acacac</color>
     <color name="text_bottom_nav_activated">#EE8247</color>
