--- a/app/src/main/res/anim/fade_in.xml
+++ b/app/src/main/res/anim/fade_in.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <alpha
-        android:fromAlpha="0.0"
-        android:toAlpha="1.0"
+    <alpha android:fromAlpha="0"
+        android:toAlpha="1"
         android:interpolator="@android:anim/accelerate_interpolator"
-        android:duration="3000"/>
+        android:duration="1500"/>
 </set>
