update animation splash

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -3,8 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:id="@+id/ll"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_splash_screen">
+    android:layout_height="match_parent">
     <ImageView
         android:id="@+id/imgApdll"
         android:scaleType="fitXY"
